[package]
name = "rsomics-average-neighbor-degree"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Average neighbor degree of graph nodes — value-exact port of networkx.average_neighbor_degree"
license = "MIT OR Apache-2.0"
keywords = ["bioinformatics", "graph", "network", "degree"]
repository = "https://github.com/omics-rust/rsomics-average-neighbor-degree"

[[bin]]
name = "rsomics-average-neighbor-degree"
path = "src/main.rs"

[lib]
name = "rsomics_average_neighbor_degree"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "and_bench"
harness = false
